home_presentation css/html

--- a/css/main.css
+++ b/css/main.css
@@ -6,30 +6,33 @@
 /* RESET */
 
 html{ /* sélecteur propriété valeur */
-  font-size: 62.5%;  /* 1.000rem root em 10px */
-  scroll-behavior: smooth;
-}
-body{
+    font-size: 62.5%;  /* 1.000rem root em 10px */
+    scroll-behavior: smooth;
+  }
+  body{
     font: 1.6rem sans-serif;
     height: 100vh;
     margin: 0;
-    letter-spacing: 5px;
-    position: relative;
-}
-h1,h2,h3{
-  margin: 0;
-}
-main{
-   max-width: 120rem;
-    margin: auto;
-    overflow: hidden;
-    
-}
+    padding: 0;
+    letter-spacing: 0.1rem;
+    line-height: 1.5;
+  }
+  h1,h2,h3,img,p,ul{
+    margin: 0;
+    padding: 0;
+    text-decoration: none;
+  }
+  
+  header,main{
+      margin: 0;
+      padding: 0;
+      overflow: hidden;    
+  }
 :root{
-  --bgcolor-theme: #BFAE9F;
-  --bgcolor: #fff;
-  --text-color: #73655D;
-  --text-deux: #0d0a08;
+  --bgcolor-theme: #ce564d;
+  --bgcolor: #554e4e;
+  --text-color: #ffffff;
+  --text-deux: #33302f;
 }
 /**{
     box-sizing: border-box;
@@ -39,94 +42,173 @@ main{
 /* THEME */
 
 /* HEADER*/
-header{
-    background-color: var(--bgcolor );
-    float: left;       /* Déplace la section vers la gauche */
-    width: 50%;         /* Fait prendre à la section la moitié de la largeur de la page */
-    height: 100vh; /* l'option vh permet de mettre la section sur toute la hauteur de la page web*/
-    color: var(--text-color);
-   
-   /* font: 'Roboto', sans-serif;*/    
+.h1{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    padding: 5rem;
+    margin: 5rem;
 }
-header > h1{
-    font-family: 'Fredericka the Great', sans-serif;
-    font-weight: 400;
-    font-size: 4rem;
-    padding-top: 10rem;
-    padding-left: 2rem;
-    line-height: 1.5;
-}
-header > h2{
-  /* font-family: 'Roboto', sans-serif;
-  font-size: 2rem; */
-  padding-left: 15%;
-  padding-top: 20%;
-  
-}
-/* MISE EN PAGE PAGE DE DROITE */
-nav.page_de_droite{ 
-  float: right;       /* Déplace la section vers la droite */
-  width: 50%;         /* Fait prendre à la section la moitié de la largeur de la page */
-  height: 100vh;
-}
+.security_presentation{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 90%;
+    margin: 1rem auto;
+    font-size: small;
+  }
 
-
-
-
-
-
-.mask{
-  overflow: hidden;
-}
-
-/* FOOTER */
-footer{
-    background-color: #BFB8B4;
+p{
+    padding: 2rem;
+    line-height: 2rem;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
     
-    /* box-sizing: border-box; */
 }
 
+.u_presentation{
+    justify-content: center;
+    align-items: center;
+    text-align: justify;   
+    list-style: disc;
+    padding: 1rem; 
+  }
+.li_presentation{
+    line-height: 1.1rem;
+    padding: 0.7rem;
+  }
+/*   CARDS */
 
+.card_security{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    margin: 3rem auto;
+    padding: 4rem;
+    gap: 2rem;
+  }
+.card_secops {
+    width: 70rem;
+    height: 20rem;
+    perspective: 1000px;
+  }
 
-
-
-
-
-
-
-
-
-
-
-
-
-/*h1,h2,h3,h4,p,ol,ul,li,figure{
-    margin: 0;
-    padding: 0;
-    list-style-type: none;
-    font-weight: normal;
-}
-header h1, footer{
-    text-align: left;
-}*/
-
-/*section ul.gallery-primary-logo{
-    padding: 1rem 0;
-    display: grid;
-    grid-template-columns: repeat(6, 1fr);
-    gap: 1rem;
-}
-section ul.gallery-primary-logo li{
-    clip-path: ellipse(130px 140px at 10% 20%);
-    cursor: pointer;
-    /*filter: drop-shadow(0 0 0.60rem)
-}
-section ul.gallery-primary-logo img{
+  .card-inner-security {
+    width: 50rem;
+    height: 20rem;
+    position: relative;
+    transform-style: preserve-3d;
+    transition: transform 0.999s;
+  }
+  
+  .card_secops:hover .card-inner-security  {
+    transform: rotateY(180deg);
+  }
+  
+  .card-front-security ,
+  .card-back-security  {
+    position: absolute;
     width: 100%;
-    padding: 1rem;
+    height: 100%;
+    backface-visibility: hidden;
+  }
+  
+  .card-front-security  {
+    background-color: var(--bgcolor-theme);
+    color: #fff;
+    display: flex;
+    align-items: center;
+    border: 1rem solid var(--bgcolor-theme);
+    border-radius: 1rem;
+    justify-content: center;
+    transform: rotateY(0deg);
+  }
+  
+  .card-back-security  {
+    background-color: var(--bgcolor-theme);
+    color: #fff;
+    display: flex;
+    align-items: center;
+    border: 1rem solid var(--bgcolor-theme);
+    border-radius: 1rem;
+    justify-content: center;
+    text-align: center;
+    font-size: 1.5rem;
+  
+    transform: rotateY(180deg);
+  }
+  .p-card-security{
+   font-size: 8rem;
+  }
+
+.bandeau_h3{
+    background-color: #554e4e;
+    height: 8rem;
+    text-align: center;
+    padding: 1.7rem;
+    color: #fff;
+    font-size: xx-large;
 }
-a{
-    text-decoration: none;
-    color: #222;
-}
-*/
+.flex_cards{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    margin: 3rem auto;
+    padding: 4rem;
+    gap: 2rem;
+  }
+  .card {
+    width: 20rem;
+    height: 30rem;
+    perspective: 1000px;
+  }
+ 
+  .card-inner {
+    width: 100%;
+    height: 100%;
+    position: relative;
+    transform-style: preserve-3d;
+    transition: transform 0.999s;
+  }
+  
+  .card:hover .card-inner {
+    transform: rotateY(180deg);
+  }
+  
+  .card-front,
+  .card-back {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    backface-visibility: hidden;
+  }
+  
+  .card-front {
+    background-color: var(--bgcolor-theme);
+    color: #fff;
+    display: flex;
+    align-items: center;
+    /* border: 1rem solid var(--bgcolor-theme); */
+    border-radius: 1rem;
+    justify-content: center;
+    transform: rotateY(0deg);
+  }
+  
+  .card-back {
+    background-color: var(--bgcolor-theme);
+    color: #fff;
+    display: flex;
+    align-items: center;
+    border: 1rem solid var(--bgcolor-theme);
+    border-radius: 1rem;
+    justify-content: center;
+    text-align: center;
+    font-size: 2rem;
+    transform: rotateY(180deg);
+  }
+  .img card{
+    width: 70%;
+  }
