--- a/css/menu_head.css
+++ b/css/menu_head.css
@@ -37,11 +37,11 @@
   ****************************************************/
   /* Barra de navegacion (contiene al nav mini menu) */
   .navbar-menu {
-    background-color: #F08080;
-    margin: 2% auto;
-    max-width: 1000px;
-    width: calc(100%);
-  }
+    background-color: #000000;
+    width: 100%;  /* Prend toute la largeur de la page */
+    margin: 0;  /* Supprime les marges */
+    padding: 0;  /* Évite tout espace autour */
+}
   
   /* Menu */
   .navbar-menu .menu {
