--- a/css/main.css
+++ b/css/main.css
@@ -156,9 +156,10 @@ p{
     flex-direction: row;
     align-items: center;
     justify-content: center;
+    width: 100%;
     margin: 3rem auto;
     padding: 4rem;
-    gap: 4rem;
+    gap: 15rem;
   }
   .card {
     width: 20rem;
