--- a/css/main.css
+++ b/css/main.css
@@ -179,7 +179,7 @@ p{
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    /* width: 100%; */
+    width: 80%;
     margin: 3rem auto;
     padding: 4rem;
     gap: 15rem;
