--- a/css/menu_head.css
+++ b/css/menu_head.css
@@ -64,6 +64,8 @@ header,main{
   ****************************************************/
   /* Barra de navegacion (contiene al nav mini menu) */
   .navbar-menu {
+    position:fixed;
+    z-index: 1000;
     background-color: #000000;
     width: 100%;  /* Prend toute la largeur de la page */
     margin: 0;  /* Supprime les marges */
