--- a/css/hello.css
+++ b/css/hello.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Lobster&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
 h1 {
     color: #333333;
     font-family: 'Montserrat', sans-serif;
