--- a/css/main.css
+++ b/css/main.css
@@ -257,8 +257,9 @@ span{
    font-size: 8rem;
   }
 
+  /* titres SECOPS ET IRM */
 .bandeau_h3{
-    background-color: var(--bgcolor-theme);
+    background-color: var(--bgcolor);
     height: 4rem;
     text-align: center;
     margin-top: 6.2rem;
@@ -267,6 +268,7 @@ span{
     font-size: xx-large;
     scroll-margin-top: 60px; /* La même valeur que la hauteur du menu */
 }
+/* card pour themes secops et irm */
 .flex_cards{
     display: flex;
     flex-direction: row;
@@ -276,6 +278,7 @@ span{
     margin: 3rem auto;
     padding: 4rem;
     gap: 15rem;
+    overflow-x: hidden;
   }
   .card{
     display: flex;
@@ -285,14 +288,15 @@ span{
     width: 20rem;
     height: 30rem;
     perspective: 1000px;
+    
   }
- 
   .card-inner{
     width: 100%;
     height: 100%;
     position: relative;
     transform-style: preserve-3d;
     transition: transform 0.999s;
+    
   }
   
   .card:hover .card-inner {
@@ -433,3 +437,13 @@ span{
   }
 }
 
+/* partie 2 blog */
+.party_2_blog{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 80%;
+  margin: 1rem auto;
+
+}
