--- a/css/main.css
+++ b/css/main.css
@@ -274,7 +274,8 @@ span{
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    width: 80%;
+    /* width: 85%; */
+    height: 45rem;
     margin: 3rem auto;
     padding: 4rem;
     gap: 15rem;
@@ -282,11 +283,12 @@ span{
   }
   .card{
     display: flex;
+    background-color: #ffffff;
     flex-direction: row;
     align-items: center;
     justify-content: center;
     width: 20rem;
-    height: 30rem;
+    height: 25rem;
     perspective: 1000px;
     
   }
@@ -324,6 +326,7 @@ span{
   
   .card-back {
     background-color: var(--bgcolor-theme);
+    width: 20rem;
     color: #fff;
     display: flex;
     align-items: center;
